filled in portfolio contents, new img folder

--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
 
         <link rel="apple-touch-icon" href="apple-touch-icon.png">
         <!-- Place favicon.ico in the root directory -->
-        <link href='http://fonts.googleapis.com/css?family=Fenix|Vast+Shadow|Mate+SC|Amatic+SC:400,700|Rock+Salt|Playfair+Display+SC:700,400,400italic|Julius+Sans+One' rel='stylesheet' type='text/css'>
+        <link href='https://fonts.googleapis.com/css?family=Fenix|Vast+Shadow|Mate+SC|Amatic+SC:400,700|Rock+Salt|Playfair+Display+SC:700,400,400italic|Julius+Sans+One' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
 <!--   	<script src="js/vendor/modernizr-2.8.3.min.js"></script>  -->
@@ -31,6 +31,7 @@
 		        	<li><a href="index.html">Projects</a></li>
 		        	<li><a href="about.html" class="selected">About Me</a></li>
 		        	<li><a href="contact.html">Contact</a></li>
+                    <li><a href="resume.pdf">Resume</a></li>
 		        </ul>
 		    </nav>
 	    </div>
@@ -41,8 +42,10 @@
             </div>
             <div id="secondary">
                 <div id="about-text">
-    	           <p>Hi! I'm Sean Ford.  I am a Front-End .... I have skills in HTML, CSS, Javascript, JQuery, Ajax, and more. I am a designer...  responsive design techniques for mobile and desktop devices.</p>
-    	           <p>If you'd like to follow me on stuff, do that! <a href="https://twitter.com">@imseanford</a></p>
+    	           <p>Hi! I'm Sean Ford.  I am a Front-End Developer and Web Designer.</p>
+                   <p>I specialize in HTML5, CSS3, JavaScript, JQuery, API integration, responsive design, wireframing, protyping, and more.</p>
+                   <p>I have a real passion for learning--I'm learnign Angular.JS and Node.JS right now--and would love to try a cool new project!</p>
+    	           
                 </div>
             </div>
         </div>
@@ -52,7 +55,6 @@
                 <div id="foot-buttons">
                     <a class="footer-button" href="http://www.github.com/seantford">github</a>
                     <a class="footer-button" href="http://www.twitter.com/imseanford">twitter</a>
-                    <a class="footer-button" href="http://www.facebook.com/seanfordseanford">facebook</a>
                 </div>
 
                 <div id="copyright">
