--- a/index.html
+++ b/index.html
@@ -9,10 +9,9 @@
 
         <link rel="apple-touch-icon" href="apple-touch-icon.png">
         <!-- Place favicon.ico in the root directory -->
-        <link href='http://fonts.googleapis.com/css?family=Fenix|Vast+Shadow|Mate+SC|Amatic+SC:400,700|Rock+Salt|Playfair+Display+SC:700,400,400italic|Julius+Sans+One' rel='stylesheet' type='text/css'>
+        <link href='https://fonts.googleapis.com/css?family=Fenix|Vast+Shadow|Mate+SC|Amatic+SC:400,700|Rock+Salt|Playfair+Display+SC:700,400,400italic|Julius+Sans+One' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
-<!--   	<script src="js/vendor/modernizr-2.8.3.min.js"></script>  -->
     </head>
     <body>
         <!--[if lt IE 8]>
@@ -31,6 +30,7 @@
 		        	<li><a href="index.html" class="selected">Projects</a></li>
 		        	<li><a href="about.html">About Me</a></li>
 		        	<li><a href="contact.html">Contact</a></li>
+		        	<li><a href="resume.pdf">Resume</a></li>
 		        </ul>
 		    </nav>
 	    </div>
@@ -38,42 +38,154 @@
 	    <div>
 	    	<ul id="gallery">
 		    	<li>
-		    		<a href="http://www.ffuzz.com">
-		    				<img src="" alt="ffuzz">
-			    			<div class="galleryInfo">	
-				    			<h3>ffuzz.com</h3>
-				    			<p>Showcasing: Resposive design, JQuery email signup form</p>
-			    			</div>
+		    		<a href="https://seantford.github.io/actionpollock/">
+	    				<img src="" alt="Action Pollock's Band Website">
+		    			<div class="galleryInfo">	
+			    			<h3>Action Pollock's Band Website</h3>
+			    			<p>Fully Designed and Wireframed, Embedded SoundCloud Media Players, JQuery plugins</p>
+		    			</div>
 		    		</a>
 		    	</li>
 		    	
 		    	<li>
-		    		<a href="http://www.ffuzz.com">
-		    				<img src="" alt="ffuzz">
-			    			<div class="galleryInfo">	
-				    			<h3>ffuzz.com</h3>
-				    			<p>Showcasing: Resposive design, JQuery email signup form</p>
-			    			</div>
+		    		<a href="bk bone project">
+	    				<img src="" alt="Brooklyn Bone Dog Walkers">
+		    			<div class="galleryInfo">	
+			    			<h3>Brooklyn Bone Dog Walkers Website Prototype</h3>
+			    			<p>"They Poop. We Scoop."</p>
+			    			<p>Wireframing, Prototyping</p>
+		    			</div>
 		    		</a>
 		    	</li>
 
 		    	<li>
-		    		<a href="http://www.ffuzz.com">
-		    				<img src="" alt="ffuzz">
-			    			<div class="galleryInfo">	
-				    			<h3>ffuzz.com</h3>
-				    			<p>Showcasing: Resposive design, JQuery email signup form</p>
-			    			</div>
+		    		<a href="https://seantford.github.io/bays/">
+	    				<img src="" alt="Bays' Band Website">
+		    			<div class="galleryInfo">	
+			    			<h3>Bays' Band Website</h3>
+			    			<p>HTML Music Players, Hosted Media </p>
+		    			</div>
 		    		</a>
 		    	</li>
 
 		    	<li>
-		    		<a href="http://www.ffuzz.com">
-		    				<img src="" alt="ffuzz">
-			    			<div class="galleryInfo">	
-				    			<h3>ffuzz.com</h3>
-				    			<p>Showcasing: Resposive design, JQuery email signup form</p>
-			    			</div>
+		    		<a href="https://seantford.github.io/vinylater/">
+	    				<img src="" alt="Vinylater Web App">
+		    			<div class="galleryInfo">	
+			    			<h3>Vinylater Web App</h3>
+			    			<p>Wireframing, Design, Animation, Media Player</p>
+		    			</div>
+		    		</a>
+		    	</li>
+
+				<li>
+		    		<a href="https://seantford.github.io/nodeJs-treehouse-badge-api-app/">
+	    				<img src="" alt="Node.js Treehouse API App">
+		    			<div class="galleryInfo">	
+			    			<h3>Node.js Treehouse API App</h3>
+			    			<p>Run "node app.js" in your browser console for a live update!</p>
+		    			</div>
+		    		</a>
+		    	</li>
+
+				<li>
+		    		<a href="https://seantford.github.io/indie-music-quiz/">
+	    				<img src="" alt="Indie Music Quiz App">
+		    			<div class="galleryInfo">	
+			    			<h3>Indie Music Quiz App</h3>
+			    			<p>You Think You Know Indie?</p>
+			    			<p>JavaScript, HTML, CSS</p>
+		    			</div>
+		    		</a>
+		    	</li>
+
+				<li>
+		    		<a href="https://seantford.github.io/flickr-API-app/">
+	    				<img src="" alt="Flickr Photo App">
+		    			<div class="galleryInfo">	
+			    			<h3>Flickr Photo App</h3>
+			    			<p>API Integration</p>
+		    			</div>
+		    		</a>
+		    	</li>
+
+				<li>
+		    		<a href="https://seantford.github.io/hiptunes-player/">
+	    				<img src="" alt="Hiptunes App">
+		    			<div class="galleryInfo">	
+			    			<h3>Hiptunes App</h3>
+			    			<p>A Media Playlist Player for Music and Movies</p>
+		    			</div>
+		    		</a>
+		    	</li>
+
+				<li>
+		    		<a href="https://seantford.github.io/ffuzz/">
+	    				<img src="" alt="FFuzz Landing Page">
+		    			<div class="galleryInfo">	
+			    			<h3>FFuzz.com Landing Page</h3>
+			    			<p>JQuery Email Signup Form</p>
+		    			</div>
+		    		</a>
+		    	</li>
+
+				<li>
+		    		<a href="https://seantford.github.io/portfolio/">
+	    				<img src="" alt="">
+		    			<div class="galleryInfo">	
+			    			<h3>This Portfolio Website!</h3>
+			    			<p>Designed, Wireframed, HTML, CSS, JavaScript, JQuery Plugins, Responsive Design</p>
+		    			</div>
+		    		</a>
+		    	</li>
+
+				<li>
+		    		<a href="https://seantford.github.io/to-do-app/">
+	    				<img src="" alt="">
+		    			<div class="galleryInfo">	
+			    			<h3>To-Do List Web App</h3>
+			    			<p>JavaScript</p>
+		    			</div>
+		    		</a>
+		    	</li>
+
+				<li>
+		    		<a href="https://seantford.github.io/dice-roller/">
+	    				<img src="" alt="">
+		    			<div class="galleryInfo">	
+			    			<h3>Dice Roller Web App</h3>
+			    			<p>Its a dice roller!</p>
+		    			</div>
+		    		</a>
+		    	</li>
+
+				<li>
+		    		<a href="https://seantford.github.io/...ffuzz3D.../">
+	    				<img src="" alt="FFuzz3D 3D PrintShop">
+		    			<div class="galleryInfo">	
+			    			<h3>Ffuzz3D PrintShop</h3>
+			    			<p>Coming Soon!</p>
+		    			</div>
+		    		</a>
+		    	</li>
+
+				<li>
+		    		<a href="https://seantford.github.io/...nodejs dynamic site.../">
+	    				<img src="" alt="">
+		    			<div class="galleryInfo">	
+			    			<h3>Treehouse Profile Site</h3>
+			    			<p>Node.js Dynamic Site, API Integration</p>
+		    			</div>
+		    		</a>
+		    	</li>
+
+				<li>
+		    		<a href="https://seantford.github.io/.../">
+	    				<img src="" alt="">
+		    			<div class="galleryInfo">	
+			    			<h3></h3>
+			    			<p></p>
+		    			</div>
 		    		</a>
 		    	</li>
 
@@ -85,7 +197,6 @@
 				<div id="foot-buttons">
 					<a class="footer-button" href="http://www.github.com/seantford">github</a>
 					<a class="footer-button" href="http://www.twitter.com/imseanford">twitter</a>
-					<a class="footer-button" href="http://www.facebook.com/seanfordseanford">facebook</a>
 				</div>
 
 				<div id="copyright">
