--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
 
         <link rel="apple-touch-icon" href="apple-touch-icon.png">
         <!-- Place favicon.ico in the root directory -->
-        <link href='http://fonts.googleapis.com/css?family=Fenix|Vast+Shadow|Mate+SC|Amatic+SC:400,700|Rock+Salt|Playfair+Display+SC:700,400,400italic|Julius+Sans+One' rel='stylesheet' type='text/css'>
+        <link href='https://fonts.googleapis.com/css?family=Fenix|Vast+Shadow|Mate+SC|Amatic+SC:400,700|Rock+Salt|Playfair+Display+SC:700,400,400italic|Julius+Sans+One' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
 <!--   	<script src="js/vendor/modernizr-2.8.3.min.js"></script>  -->
@@ -31,6 +31,7 @@
 		        	<li><a href="index.html">Projects</a></li>
 		        	<li><a href="about.html">About Me</a></li>
 		        	<li><a href="contact.html" class="selected">Contact</a></li>
+                    <li><a href="resume.pdf">Resume</a></li>
 		        </ul>
 		    </nav>
 	    </div>
@@ -38,7 +39,7 @@
 	    <div class="wrapper">
 		    <section id="primary">
                 <h3>General Information</h3>
-                <p>I am currently looking for employment as a Front-End Developer, and I am open to freelance, short-term, and long-term positions.</p>
+                <p>I am currently looking for employment as a Front-End Developer or Web Designer, and I am open to freelance, short-term, and long-term positions.</p>
                 <p>Feel free to contact me for more information!</p>
             </section>
             
@@ -56,7 +57,6 @@
                 <div id="foot-buttons">
                     <a class="footer-button" href="http://www.github.com/seantford">github</a>
                     <a class="footer-button" href="http://www.twitter.com/imseanford">twitter</a>
-                    <a class="footer-button" href="http://www.facebook.com/seanfordseanford">facebook</a>
                 </div>
 
                 <div id="copyright">
