employment contact fix

--- a/contact.html
+++ b/contact.html
@@ -38,7 +38,7 @@
 
 	    <div class="wrapper">
 		    <section id="primary">
-                <h3>General Information</h3>
+                <h3>Employment</h3>
                 <p>I am currently looking for employment as a Front-End Developer or Web Designer, and I am open to freelance, short-term, and long-term positions.</p>
                 <p>Feel free to contact me for more information!</p>
             </section>
