--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title>Sean Ford: Front-End Developer</title>
+        <title>Sean Ford: Web Developer & Designer</title>
         <meta name="description" content="Web Development Portfolio for Sean Ford">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -22,7 +22,7 @@
         <div class="header">
         	<a href="index.html">
 	            <h1 id="logoName">Sean Ford</h1> 
-	            <h2 id="logoJob">Web Developer</h2>
+	            <h2 id="logoJob">Web Developer & Designer</h2>
 	        </a>
 
 		    <nav>
