boilerplate>clean code, minor changes

--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title>Sean Ford: Web Developer & Designer</title>
+        <title>Sean Ford: Web Developer &amp; Designer</title>
         <meta name="description" content="Web Development Portfolio for Sean Ford">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -11,7 +11,10 @@
         <!-- Place favicon.ico in the root directory -->
         <link href='https://fonts.googleapis.com/css?family=Fenix|Vast+Shadow|Mate+SC|Amatic+SC:400,700|Rock+Salt|Playfair+Display+SC:700,400,400italic|Julius+Sans+One' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" href="css/normalize.css">
-        <link rel="stylesheet" href="css/main.css">
+        <link rel="stylesheet" href="css/styles.css">
+        <!-- <link rel="stylesheet" href="css/main.css"> -->
+        <link rel="stylesheet" href="css/responsive.css">
+
 <!--   	<script src="js/vendor/modernizr-2.8.3.min.js"></script>  -->
     </head>
     <body>
@@ -23,7 +26,7 @@
         <div class="header">
         	<a href="index.html">
 	            <h1 id="logoName">Sean Ford</h1> 
-	            <h2 id="logoJob">Web Developer & Designer</h2>
+	            <h2 id="logoJob">Web Developer &amp; Designer</h2>
 	        </a>
 
 		    <nav>
