commented out stylesheets

--- a/about.html
+++ b/about.html
@@ -12,8 +12,8 @@
         <link href='https://fonts.googleapis.com/css?family=Fenix|Vast+Shadow|Mate+SC|Amatic+SC:400,700|Rock+Salt|Playfair+Display+SC:700,400,400italic|Julius+Sans+One' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/styles.css">
-        <link rel="stylesheet" href="css/main.css">
-        <link rel="stylesheet" href="css/responsive.css">
+        <!-- <link rel="stylesheet" href="css/main.css"> -->
+        <!-- <link rel="stylesheet" href="css/responsive.css"> -->
 
 <!--   	<script src="js/vendor/modernizr-2.8.3.min.js"></script>  -->
     </head>
