--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/styles.css">
         <!-- <link rel="stylesheet" href="css/main.css"> -->
-        <link rel="stylesheet" href="css/responsive.css">
+        <!-- <link rel="stylesheet" href="css/responsive.css"> -->
 
 <!--   	<script src="js/vendor/modernizr-2.8.3.min.js"></script>  -->
     </head>
