--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 	    	<ul id="gallery">
 		    	<li>
 		    		<a href="https://seantford.github.io/actionpollock/">
-	    				<img src="apart3d.jpg" alt="Action Pollock's Band Website">
+	    				<img src="APart3D.jpg" alt="Action Pollock's Band Website">
 		    			<div class="galleryInfo">	
 			    			<h3>Action Pollock's Band Website</h3>
 			    			<p>Fully Designed and Wireframed, Embedded SoundCloud Media Players, JQuery plugins</p>
