--- a/about.html
+++ b/about.html
@@ -32,7 +32,7 @@
 		    <nav>
 		        <ul>
 		        	<li><a href="index.html">Projects</a></li>
-		        	<li><a href="about.html" class="selected">About Me</a></li>
+		        	<li><a href="about.html" class="selected">About</a></li>
 		        	<li><a href="contact.html">Contact</a></li>
                     <li><a href="resume.pdf">Resume</a></li>
 		        </ul>
