--- a/contact.html
+++ b/contact.html
@@ -32,7 +32,7 @@
 		    <nav>
 		        <ul>
 		        	<li><a href="index.html">Projects</a></li>
-		        	<li><a href="about.html">About Me</a></li>
+		        	<li><a href="about.html">About</a></li>
 		        	<li><a href="contact.html" class="selected">Contact</a></li>
                     <li><a href="#">Resume</a></li>
 		        </ul>
