--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 	    	<ul id="gallery">
 		    	<li>
 		    		<a href="https://seantford.github.io/actionpollock/">
-	    				<img src="APart3D.jpg" alt="Action Pollock's Band Website">
+	    				<img src="img/APart3D.jpg" alt="Action Pollock's Band Website">
 		    			<div class="galleryInfo">	
 			    			<h3>Action Pollock's Band Website</h3>
 			    			<p>Fully Designed and Wireframed, Embedded SoundCloud Media Players, JQuery plugins</p>
@@ -51,7 +51,7 @@
 		    	
 		    	<li>
 		    		<a href="bk bone project">
-	    				<img src="" alt="Brooklyn Bone Dog Walkers">
+	    				<img src="img/APart3D.jpg" alt="Brooklyn Bone Dog Walkers">
 		    			<div class="galleryInfo">	
 			    			<h3>Brooklyn Bone Dog Walkers Website Prototype</h3>
 			    			<p>"They Poop. We Scoop."</p>
@@ -62,7 +62,7 @@
 
 		    	<li>
 		    		<a href="https://seantford.github.io/bays/">
-	    				<img src="" alt="Bays' Band Website">
+	    				<img src="img/APart3D.jpg" alt="Bays' Band Website">
 		    			<div class="galleryInfo">	
 			    			<h3>Bays' Band Website</h3>
 			    			<p>HTML Music Players, Hosted Media </p>
@@ -72,7 +72,7 @@
 
 		    	<li>
 		    		<a href="https://seantford.github.io/vinylater/">
-	    				<img src="" alt="Vinylater Web App">
+	    				<img src="img/APart3D.jpg" alt="Vinylater Web App">
 		    			<div class="galleryInfo">	
 			    			<h3>Vinylater Web App</h3>
 			    			<p>Wireframing, Design, Animation, Media Player</p>
@@ -82,7 +82,7 @@
 
 				<li>
 		    		<a href="https://seantford.github.io/nodeJs-treehouse-badge-api-app/">
-	    				<img src="" alt="Node.js Treehouse API App">
+	    				<img src="img/APart3D.jpg" alt="Node.js Treehouse API App">
 		    			<div class="galleryInfo">	
 			    			<h3>Node.js Treehouse API App</h3>
 			    			<p>Run "node app.js" in your browser console for a live update!</p>
@@ -92,7 +92,7 @@
 
 				<li>
 		    		<a href="https://seantford.github.io/indie-music-quiz/">
-	    				<img src="" alt="Indie Music Quiz App">
+	    				<img src="img/APart3D.jpg" alt="Indie Music Quiz App">
 		    			<div class="galleryInfo">	
 			    			<h3>Indie Music Quiz App</h3>
 			    			<p>You Think You Know Indie?</p>
