--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/styles.css">
         <!-- <link rel="stylesheet" href="css/main.css"> -->
-        <!-- <link rel="stylesheet" href="css/responsive.css"> -->
+        <link rel="stylesheet" href="css/responsive.css">
     </head>
     <body>
         <!--[if lt IE 8]>
