--- a/index.html
+++ b/index.html
@@ -37,14 +37,14 @@
 		    </nav>
 	    </div>
 
-	    <div>
+	    <div id="gal-wrap">
 	    	<ul id="gallery">
 		    	<li>
 		    		<a href="https://seantford.github.io/actionpollock/">
 	    				<img src="img/APart3D.jpg" alt="Action Pollock's Band Website">
 		    			<div class="galleryInfo">	
-			    			<h3>Action Pollock's Band Website</h3>
-			    			<p>Fully Designed and Wireframed, Embedded SoundCloud Media Players, JQuery plugins</p>
+			    			<h3 class="gal-info">Action Pollock's Band Website</h3>
+			    			<p class="gal-info">Fully Designed and Wireframed, Embedded SoundCloud Media Players, JQuery plugins</p>
 		    			</div>
 		    		</a>
 		    	</li>
@@ -53,9 +53,9 @@
 		    		<a href="bk bone project">
 	    				<img src="img/APart3D.jpg" alt="Brooklyn Bone Dog Walkers">
 		    			<div class="galleryInfo">	
-			    			<h3>Brooklyn Bone Dog Walkers Website Prototype</h3>
-			    			<p>"They Poop. We Scoop."</p>
-			    			<p>Wireframing, Prototyping</p>
+			    			<h3 class="gal-info">Brooklyn Bone Dog Walkers Website Prototype</h3>
+			    			<p class="gal-info">"They Poop. We Scoop."</p>
+			    			<p class="gal-info">Wireframing, Prototyping</p>
 		    			</div>
 		    		</a>
 		    	</li>
@@ -64,8 +64,8 @@
 		    		<a href="https://seantford.github.io/bays/">
 	    				<img src="img/APart3D.jpg" alt="Bays' Band Website">
 		    			<div class="galleryInfo">	
-			    			<h3>Bays' Band Website</h3>
-			    			<p>HTML Music Players, Hosted Media </p>
+			    			<h3 class="gal-info">Bays' Band Website</h3>
+			    			<p class="gal-info">HTML Music Players, Hosted Media </p>
 		    			</div>
 		    		</a>
 		    	</li>
@@ -74,8 +74,8 @@
 		    		<a href="https://seantford.github.io/vinylater/">
 	    				<img src="img/APart3D.jpg" alt="Vinylater Web App">
 		    			<div class="galleryInfo">	
-			    			<h3>Vinylater Web App</h3>
-			    			<p>Wireframing, Design, Animation, Media Player</p>
+			    			<h3 class="gal-info">Vinylater Web App</h3>
+			    			<p class="gal-info">Wireframing, Design, Animation, Media Player</p>
 		    			</div>
 		    		</a>
 		    	</li>
@@ -84,8 +84,8 @@
 		    		<a href="https://seantford.github.io/nodeJs-treehouse-badge-api-app/">
 	    				<img src="img/APart3D.jpg" alt="Node.js Treehouse API App">
 		    			<div class="galleryInfo">	
-			    			<h3>Node.js Treehouse API App</h3>
-			    			<p>Run "node app.js" in your browser console for a live update!</p>
+			    			<h3 class="gal-info">Node.js Treehouse API App</h3>
+			    			<p class="gal-info">Run "node app.js" in your browser console for a live update!</p>
 		    			</div>
 		    		</a>
 		    	</li>
@@ -94,9 +94,9 @@
 		    		<a href="https://seantford.github.io/indie-music-quiz/">
 	    				<img src="img/APart3D.jpg" alt="Indie Music Quiz App">
 		    			<div class="galleryInfo">	
-			    			<h3>Indie Music Quiz App</h3>
-			    			<p>You Think You Know Indie?</p>
-			    			<p>JavaScript, HTML, CSS</p>
+			    			<h3 class="gal-info">Indie Music Quiz App</h3>
+			    			<p class="gal-info">You Think You Know Indie?</p>
+			    			<p class="gal-info">JavaScript, HTML, CSS</p>
 		    			</div>
 		    		</a>
 		    	</li>
@@ -105,8 +105,8 @@
 		    		<a href="https://seantford.github.io/flickr-API-app/">
 	    				<img src="" alt="Flickr Photo App">
 		    			<div class="galleryInfo">	
-			    			<h3>Flickr Photo App</h3>
-			    			<p>API Integration</p>
+			    			<h3 class="gal-info">Flickr Photo App</h3>
+			    			<p class="gal-info">API Integration</p>
 		    			</div>
 		    		</a>
 		    	</li>
@@ -115,8 +115,8 @@
 		    		<a href="https://seantford.github.io/hiptunes-player/">
 	    				<img src="" alt="Hiptunes App">
 		    			<div class="galleryInfo">	
-			    			<h3>Hiptunes App</h3>
-			    			<p>A Media Playlist Player for Music and Movies</p>
+			    			<h3 class="gal-info">Hiptunes App</h3>
+			    			<p class="gal-info">A Media Playlist Player for Music and Movies</p>
 		    			</div>
 		    		</a>
 		    	</li>
@@ -125,8 +125,8 @@
 		    		<a href="https://seantford.github.io/ffuzz/">
 	    				<img src="" alt="FFuzz Landing Page">
 		    			<div class="galleryInfo">	
-			    			<h3>FFuzz.com Landing Page</h3>
-			    			<p>JQuery Email Signup Form</p>
+			    			<h3 class="gal-info">FFuzz.com Landing Page</h3>
+			    			<p class="gal-info">JQuery Email Signup Form</p>
 		    			</div>
 		    		</a>
 		    	</li>
@@ -135,8 +135,8 @@
 		    		<a href="https://seantford.github.io/portfolio/">
 	    				<img src="" alt="">
 		    			<div class="galleryInfo">	
-			    			<h3>This Portfolio Website!</h3>
-			    			<p>Designed, Wireframed, HTML, CSS, JavaScript, JQuery Plugins, Responsive Design</p>
+			    			<h3 class="gal-info">This Portfolio Website!</h3>
+			    			<p class="gal-info">Designed, Wireframed, HTML, CSS, JavaScript, JQuery Plugins, Responsive Design</p>
 		    			</div>
 		    		</a>
 		    	</li>
@@ -145,8 +145,8 @@
 		    		<a href="https://seantford.github.io/to-do-app/">
 	    				<img src="" alt="">
 		    			<div class="galleryInfo">	
-			    			<h3>To-Do List Web App</h3>
-			    			<p>JavaScript</p>
+			    			<h3 class="gal-info">To-Do List Web App</h3>
+			    			<p class="gal-info">JavaScript</p>
 		    			</div>
 		    		</a>
 		    	</li>
@@ -155,8 +155,8 @@
 		    		<a href="https://seantford.github.io/dice-roller/">
 	    				<img src="" alt="">
 		    			<div class="galleryInfo">	
-			    			<h3>Dice Roller Web App</h3>
-			    			<p>Its a dice roller!</p>
+			    			<h3 class="gal-info">Dice Roller Web App</h3>
+			    			<p class="gal-info">Its a dice roller!</p>
 		    			</div>
 		    		</a>
 		    	</li>
@@ -165,8 +165,8 @@
 		    		<a href="https://seantford.github.io/...ffuzz3D.../">
 	    				<img src="" alt="FFuzz3D 3D PrintShop">
 		    			<div class="galleryInfo">	
-			    			<h3>Ffuzz3D PrintShop</h3>
-			    			<p>Coming Soon!</p>
+			    			<h3 class="gal-info">Ffuzz3D PrintShop</h3>
+			    			<p class="gal-info">Coming Soon!</p>
 		    			</div>
 		    		</a>
 		    	</li>
@@ -175,8 +175,8 @@
 		    		<a href="https://seantford.github.io/...nodejs dynamic site.../">
 	    				<img src="" alt="">
 		    			<div class="galleryInfo">	
-			    			<h3>Treehouse Profile Site</h3>
-			    			<p>Node.js Dynamic Site, API Integration</p>
+			    			<h3 class="gal-info">Treehouse Profile Site</h3>
+			    			<p class="gal-info">Node.js Dynamic Site, API Integration</p>
 		    			</div>
 		    		</a>
 		    	</li>
@@ -185,8 +185,8 @@
 		    		<a href="https://seantford.github.io/.../">
 	    				<img src="" alt="">
 		    			<div class="galleryInfo">	
-			    			<h3></h3>
-			    			<p></p>
+			    			<h3 class="gal-info"></h3>
+			    			<p class="gal-info"></p>
 		    			</div>
 		    		</a>
 		    	</li>
