--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 		    		<a href="bk bone project">
 	    				<img src="img/APart3D.jpg" alt="Brooklyn Bone Dog Walkers">
 		    			<div class="galleryInfo">	
-			    			<h3 class="gal-info">Brooklyn Bone Dog Walkers Website Prototype</h3>
+			    			<h3 class="gal-info">Brooklyn Bone Dog Walkers Website</h3>
 			    			<p class="gal-info">"They Poop. We Scoop."</p>
 			    			<p class="gal-info">Wireframing, Prototyping</p>
 		    			</div>
