about, contact fixes, imgs

--- a/about.html
+++ b/about.html
@@ -41,7 +41,7 @@
 
 	    <div id="about" class="wrapper">
             <div id="primary">
-                <img src="img/sean.jpg" alt="Photo of Sean Ford" class="profile-photo">
+                <img src="img/sf2.gif" alt="Photo of Sean Ford" class="profile-photo">
             </div>
             <div id="secondary">
                 <div id="about-text">
