--- a/contact.html
+++ b/contact.html
@@ -46,7 +46,7 @@
                 <p>Feel free to contact me for more information!</p>
             </section>
             
-            <section id="secondary">
+            <section id="contact-secondary">
                 <h3>Contact Details</h3>
                 <ul class="contact-info">
                     <li class="phone"><a href="tel:347-287-7067">(347) 287-7067</a></li>
