add treehouse link to footer

--- a/index.html
+++ b/index.html
@@ -199,6 +199,7 @@
 				<div id="foot-buttons">
 					<a class="footer-button" href="http://www.github.com/seantford">github</a>
 					<a class="footer-button" href="http://www.twitter.com/imseanford">twitter</a>
+					<a class="footer-button" href="http://www.teamtreehouse.com/seanford">treehouse</a>
 				</div>
 
 				<div id="copyright">
