images for gallery

--- a/index.html
+++ b/index.html
@@ -50,12 +50,23 @@
 		    	</li>
 		    	
 		    	<li>
-		    		<a href="bk bone project">
-	    				<img src="img/APart3D.jpg" alt="Brooklyn Bone Dog Walkers">
+		    		<a href="https://live.uxpin.com/474353e1e135a852c20756201507ffad67b67b9c#/pages/29785817?mode=cm">
+	    				<img src="img/bkbonedesktop.gif" alt="Brooklyn Bone Dog Walkers">
 		    			<div class="galleryInfo">	
 			    			<h3 class="gal-info">Brooklyn Bone Dog Walkers Website</h3>
 			    			<p class="gal-info">"They Poop. We Scoop."</p>
-			    			<p class="gal-info">Wireframing, Prototyping</p>
+			    			<p class="gal-info">Wireframed through UXPin</p>
+		    			</div>
+		    		</a>
+		    	</li>
+		    	
+		    	<li>
+		    		<a href="https://live.uxpin.com/474353e1e135a852c20756201507ffad67b67b9c#/pages/27744699?mode=cm">
+	    				<img src="img/bkbonemobile.gif" alt="Brooklyn Bone Dog Walkers">
+		    			<div class="galleryInfo">	
+			    			<h3 class="gal-info">Brooklyn Bone Dog Walkers (Mobile)</h3>
+			    			<p class="gal-info">"They Poop. We Scoop."</p>
+			    			<p class="gal-info">Wireframed through UXPin</p>
 		    			</div>
 		    		</a>
 		    	</li>
@@ -123,7 +134,7 @@
 
 				<li>
 		    		<a href="https://seantford.github.io/ffuzz/">
-	    				<img src="" alt="FFuzz Landing Page">
+	    				<img src="img/ffuzz.gif" alt="FFuzz Landing Page">
 		    			<div class="galleryInfo">	
 			    			<h3 class="gal-info">FFuzz.com Landing Page</h3>
 			    			<p class="gal-info">JQuery Email Signup Form</p>
