--- a/index.html
+++ b/index.html
@@ -73,9 +73,9 @@
 
 		    	<li>
 		    		<a href="https://seantford.github.io/bays/">
-	    				<img src="img/APart3D.jpg" alt="Bays' Band Website">
+	    				<img src="img/bays.gif" alt="Bays' Band Website">
 		    			<div class="galleryInfo">	
-			    			<h3 class="gal-info">Bays' Band Website</h3>
+			    			<h3 class="gal-info">Bays Band Website</h3>
 			    			<p class="gal-info">HTML Music Players, Hosted Media </p>
 		    			</div>
 		    		</a>
@@ -83,10 +83,10 @@
 
 		    	<li>
 		    		<a href="https://seantford.github.io/vinylater/">
-	    				<img src="img/APart3D.jpg" alt="Vinylater Web App">
+	    				<img src="img/vinylater.gif" alt="Vinylater Web App">
 		    			<div class="galleryInfo">	
 			    			<h3 class="gal-info">Vinylater Web App</h3>
-			    			<p class="gal-info">Wireframing, Design, Animation, Media Player</p>
+			    			<p class="gal-info">Wireframed in UXpin, Designed with HTML, CSS</p>
 		    			</div>
 		    		</a>
 		    	</li>
