responsive css for all pages

--- a/about.html
+++ b/about.html
@@ -40,8 +40,7 @@
                 <div id="about-text">
     	           <p>Hi! I'm Sean Ford.  I am a Front-End Developer and Web Designer.</p>
                    <p>I specialize in HTML5, CSS3, JavaScript, JQuery, API integration, responsive design, wireframing, protyping, and more.</p>
-                   <p>I have a real passion for learning--I'm learnign Angular.JS and Node.JS right now--and would love to try a cool new project!</p>
-    	           
+                   <p>I have a real passion for learning--I'm learnign Angular.JS and Node.JS right now--and am happy to try my hand at any cool new project!</p>
                 </div>
             </div>
         </div>
