add thumbs for gallery

--- a/index.html
+++ b/index.html
@@ -98,10 +98,10 @@
 
 				<li>
 		    		<a href="https://seantford.github.io/indie-music-quiz/">
-	    				<img src="img/APart3D.jpg" alt="Indie Music Quiz App">
+	    				<img src="img/indieQuiz.gif" alt="Indie Music Quiz App">
 		    			<div class="galleryInfo">	
 			    			<h3 class="gal-info">Indie Music Quiz App</h3>
-			    			<p class="gal-info">You Think You Know Indie?</p>
+			    			<p class="gal-info">You Think You Know Indie Rock?</p>
 			    			<p class="gal-info">JavaScript, HTML, CSS</p>
 		    			</div>
 		    		</a>
@@ -119,7 +119,7 @@
 
 				<li>
 		    		<a href="https://seantford.github.io/hiptunes-player/">
-	    				<img src="" alt="Hiptunes App">
+	    				<img src="img/hiptunes.gif" alt="Hiptunes App">
 		    			<div class="galleryInfo">	
 			    			<h3 class="gal-info">Hiptunes App</h3>
 			    			<p class="gal-info">A Media Playlist Player for Music and Movies</p>
@@ -139,7 +139,7 @@
 
 				<li>
 		    		<a href="https://seantford.github.io/portfolio/">
-	    				<img src="" alt="">
+	    				<img src="img/portfolio.gif" alt="This Portfolio Site">
 		    			<div class="galleryInfo">	
 			    			<h3 class="gal-info">This Portfolio Website!</h3>
 			    			<p class="gal-info">Designed, Wireframed, HTML, CSS, JavaScript, JQuery Plugins, Responsive Design</p>
@@ -149,7 +149,7 @@
 
 				<li>
 		    		<a href="https://seantford.github.io/to-do-app/">
-	    				<img src="" alt="">
+	    				<img src="toDo.gif" alt="To Do List App">
 		    			<div class="galleryInfo">	
 			    			<h3 class="gal-info">To-Do List Web App</h3>
 			    			<p class="gal-info">JavaScript</p>
@@ -158,18 +158,8 @@
 		    	</li>
 
 				<li>
-		    		<a href="https://seantford.github.io/dice-roller/">
-	    				<img src="" alt="">
-		    			<div class="galleryInfo">	
-			    			<h3 class="gal-info">Dice Roller Web App</h3>
-			    			<p class="gal-info">Its a dice roller!</p>
-		    			</div>
-		    		</a>
-		    	</li>
-
-				<li>
 		    		<a href="https://seantford.github.io/...ffuzz3D.../">
-	    				<img src="" alt="FFuzz3D 3D PrintShop">
+	    				<img src="ffuzz3d.gif" alt="FFuzz3D 3D PrintShop">
 		    			<div class="galleryInfo">	
 			    			<h3 class="gal-info">Ffuzz3D PrintShop</h3>
 			    			<p class="gal-info">Coming Soon!</p>
@@ -186,8 +176,20 @@
 		    			</div>
 		    		</a>
 		    	</li>
-
+		    	
 				<li>
+		    		<a href="https://seantford.github.io/dice-roller/">
+	    				<img src="" alt="">
+		    			<div class="galleryInfo">	
+			    			<h3 class="gal-info">Dice Roller Web App</h3>
+			    			<p class="gal-info">Its a dice roller!</p>
+		    			</div>
+		    		</a>
+		    	</li>
+
+
+
+				<!-- <li>
 		    		<a href="https://seantford.github.io/.../">
 	    				<img src="" alt="">
 		    			<div class="galleryInfo">	
@@ -195,7 +197,7 @@
 			    			<p class="gal-info"></p>
 		    			</div>
 		    		</a>
-		    	</li>
+		    	</li> -->
 
 		    </ul>
 		</div>
