--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 
 				<li>
 		    		<a href="https://seantford.github.io/flickr-API-app/">
-	    				<img src="" alt="Flickr Photo App">
+	    				<img src="img/inprogress.gif" alt="Flickr Photo App">
 		    			<div class="galleryInfo">	
 			    			<h3 class="gal-info">Flickr Photo App</h3>
 			    			<p class="gal-info">API Integration</p>
@@ -149,7 +149,7 @@
 
 				<li>
 		    		<a href="https://seantford.github.io/to-do-app/">
-	    				<img src="toDo.gif" alt="To Do List App">
+	    				<img src="img/toDo.gif" alt="To Do List App">
 		    			<div class="galleryInfo">	
 			    			<h3 class="gal-info">To-Do List Web App</h3>
 			    			<p class="gal-info">JavaScript</p>
@@ -159,7 +159,7 @@
 
 				<li>
 		    		<a href="https://seantford.github.io/...ffuzz3D.../">
-	    				<img src="ffuzz3d.gif" alt="FFuzz3D 3D PrintShop">
+	    				<img src="img/ffuzz3d.gif" alt="FFuzz3D 3D PrintShop">
 		    			<div class="galleryInfo">	
 			    			<h3 class="gal-info">Ffuzz3D PrintShop</h3>
 			    			<p class="gal-info">Coming Soon!</p>
@@ -169,14 +169,14 @@
 
 				<li>
 		    		<a href="https://seantford.github.io/...nodejs dynamic site.../">
-	    				<img src="" alt="">
+	    				<img src="img/inprogress.gif" alt="In Progress">
 		    			<div class="galleryInfo">	
 			    			<h3 class="gal-info">Treehouse Profile Site</h3>
 			    			<p class="gal-info">Node.js Dynamic Site, API Integration</p>
 		    			</div>
 		    		</a>
 		    	</li>
-		    	
+
 				<li>
 		    		<a href="https://seantford.github.io/dice-roller/">
 	    				<img src="" alt="">
