--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
 		    			<div class="galleryInfo">	
 			    			<h3 class="gal-info">Brooklyn Bone Dog Walkers Website</h3>
 			    			<p class="gal-info">"They Poop. We Scoop."</p>
+			    			<p class="gal-info">A Brooklyn, NY-based small business</p>
 			    			<p class="gal-info">Wireframed through UXPin</p>
 		    			</div>
 		    		</a>
@@ -61,6 +62,7 @@
 		    			<div class="galleryInfo">	
 			    			<h3 class="gal-info">Brooklyn Bone Dog Walkers (Mobile)</h3>
 			    			<p class="gal-info">"They Poop. We Scoop."</p>
+			    			<p class="gal-info">A Brooklyn, NY-based small business</p>
 			    			<p class="gal-info">Wireframed through UXPin</p>
 		    			</div>
 		    		</a>
@@ -82,11 +84,12 @@
 		    			<div class="galleryInfo">	
 			    			<h3 class="gal-info">Vinylater Web App</h3>
 			    			<p class="gal-info">Wireframed in UXpin, Designed with HTML, CSS</p>
+			    			<p class="gal-info">Work In Progress!</p>
 		    			</div>
 		    		</a>
 		    	</li>
 
-				<li>
+				<!-- <li>
 		    		<a href="https://seantford.github.io/nodeJs-treehouse-badge-api-app/">
 	    				<img src="img/APart3D.jpg" alt="Node.js Treehouse API App">
 		    			<div class="galleryInfo">	
@@ -94,7 +97,7 @@
 			    			<p class="gal-info">Run "node app.js" in your browser console for a live update!</p>
 		    			</div>
 		    		</a>
-		    	</li>
+		    	</li> -->
 
 				<li>
 		    		<a href="https://seantford.github.io/indie-music-quiz/">
@@ -109,7 +112,7 @@
 
 				<li>
 		    		<a href="https://seantford.github.io/flickr-API-app/">
-	    				<img src="img/inprogress.gif" alt="Flickr Photo App">
+	    				<img src="img/flickrapp.gif" alt="Flickr Photo App">
 		    			<div class="galleryInfo">	
 			    			<h3 class="gal-info">Flickr Photo App</h3>
 			    			<p class="gal-info">API Integration</p>
@@ -167,7 +170,7 @@
 		    		</a>
 		    	</li>
 
-				<li>
+				<!-- <li>
 		    		<a href="https://seantford.github.io/...nodejs dynamic site.../">
 	    				<img src="img/inprogress.gif" alt="In Progress">
 		    			<div class="galleryInfo">	
@@ -175,9 +178,9 @@
 			    			<p class="gal-info">Node.js Dynamic Site, API Integration</p>
 		    			</div>
 		    		</a>
-		    	</li>
+		    	</li> -->
 
-				<li>
+<!-- 				<li>
 		    		<a href="https://seantford.github.io/dice-roller/">
 	    				<img src="" alt="">
 		    			<div class="galleryInfo">	
@@ -185,9 +188,7 @@
 			    			<p class="gal-info">Its a dice roller!</p>
 		    			</div>
 		    		</a>
-		    	</li>
-
-
+		    	</li> -->
 
 				<!-- <li>
 		    		<a href="https://seantford.github.io/.../">
