--- a/contact.html
+++ b/contact.html
@@ -28,7 +28,7 @@
 		        	<li><a href="index.html">Projects</a></li>
 		        	<li><a href="about.html">About</a></li>
 		        	<li><a href="contact.html" class="selected">Contact</a></li>
-                    <li><a href="#">Resume</a></li>
+                    <li><a href="SeanFordFrontEndDevResume.pdf">Resume</a></li>
 		        </ul>
 		    </nav>
 	    </div>
