--- a/index.html
+++ b/index.html
@@ -49,7 +49,6 @@
 	    				<img src="img/bkbonedesktop.gif" alt="Brooklyn Bone Dog Walkers">
 		    			<div class="galleryInfo">	
 			    			<h3 class="gal-info">Brooklyn Bone Dog Walkers Website</h3>
-			    			<p class="gal-info">"They Poop. We Scoop."</p>
 			    			<p class="gal-info">A Brooklyn, NY-based small business</p>
 			    			<p class="gal-info">Wireframed through UXPin</p>
 		    			</div>
@@ -61,9 +60,7 @@
 	    				<img src="img/bkbonemobile.gif" alt="Brooklyn Bone Dog Walkers">
 		    			<div class="galleryInfo">	
 			    			<h3 class="gal-info">Brooklyn Bone Dog Walkers (Mobile)</h3>
-			    			<p class="gal-info">"They Poop. We Scoop."</p>
-			    			<p class="gal-info">A Brooklyn, NY-based small business</p>
-			    			<p class="gal-info">Wireframed through UXPin</p>
+			    			<p class="gal-info">"They Poop. We Scoop."</p>			    			<p class="gal-info">Wireframed through UXPin</p>
 		    			</div>
 		    		</a>
 		    	</li>
