--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 	    				<img src="img/APart3D.jpg" alt="Action Pollock's Band Website">
 		    			<div class="galleryInfo">	
 			    			<h3 class="gal-info">Action Pollock's Band Website</h3>
-			    			<p class="gal-info">Fully Designed and Wireframed, Embedded SoundCloud Media Players, JQuery plugins</p>
+			    			<p class="gal-info">Fully designed and wireframed, Embedded SoundCloud media players, JQuery plugins</p>
 		    			</div>
 		    		</a>
 		    	</li>
@@ -60,7 +60,8 @@
 	    				<img src="img/bkbonemobile.gif" alt="Brooklyn Bone Dog Walkers">
 		    			<div class="galleryInfo">	
 			    			<h3 class="gal-info">Brooklyn Bone Dog Walkers (Mobile)</h3>
-			    			<p class="gal-info">"They Poop. We Scoop."</p>			    			<p class="gal-info">Wireframed through UXPin</p>
+			    			<p class="gal-info">"They Poop. We Scoop."</p>			    		
+			    			<p class="gal-info">Wireframed through UXPin</p>
 		    			</div>
 		    		</a>
 		    	</li>
