--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
      
         <div class="header">
         	<a href="index.html">
-	            <h1 id="logoName">SF</h1> 
+	            <h1 id="logoName">Sean Ford</h1> 
 	            <h2 id="logoJob">Web Developer &amp; Designer</h2>
 	        </a>
 
