added favorite movies app

--- a/index.html
+++ b/index.html
@@ -65,6 +65,16 @@
 		    	</li>
 
 		    	<li>
+		    		<a href="https://seantford.github.io/favorite-movies-app/">
+	    				<img src="img/dig.gif" alt="Favorite Movies App">
+		    			<div class="galleryInfo">	
+			    			<h3 class="gal-info">Dig these Films!</h3>
+			    			<p class="gal-info">Add your favorite movies, and vote to get it to the top of the list!</p>
+		    			</div>
+		    		</a>
+		    	</li>
+		    	
+		    	<li>
 		    		<a href="https://seantford.github.io/bays/">
 	    				<img src="img/bays.gif" alt="Bays' Band Website">
 		    			<div class="galleryInfo">	
