added color blaster plugin feature, gifs, retool content

--- a/contact.html
+++ b/contact.html
@@ -26,7 +26,7 @@
 		        	<li><a href="index.html">Projects</a></li>
 		        	<li><a href="about.html">About</a></li>
 		        	<li><a href="contact.html" class="selected">Contact</a></li>
-                    <li><a href="SeanFordFrontEndDevResume.pdf">Resume</a></li>
+                    <li><a href="SeanFordDevResume.pdf">Resume</a></li>
 		        </ul>
 		    </nav>
 	    </div>
@@ -34,7 +34,7 @@
 	    <div class="wrapper">
 		    <section id="primary">
                 <h3>Employment</h3>
-                <p>I am currently looking for employment as a Front-End Developer or Web Designer, and I am open to freelance, short-term, and long-term positions.</p>
+                <p>I am currently looking for employment as a Web Developer or Designer in the New York capital region, and I am open to freelance, remote, short-term, and long-term positions.</p>
                 <p>Feel free to contact me for more information!</p>
             </section>
             
