--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
 		        	<li><a href="index.html">Projects</a></li>
 		        	<li><a href="about.html" class="selected">About</a></li>
 		        	<li><a href="contact.html">Contact</a></li>
-                    <li><a href="SeanFordFrontEndDevResume.pdf">Resume</a></li>
+                    <li><a href="SeanFordDevResume.pdf">Resume</a></li>
 		        </ul>
 		    </nav>
 	    </div>
@@ -36,9 +36,10 @@
             </div>
             <div id="secondary">
                 <div id="about-text">
-    	           <p>Hi! I'm Sean Ford.  I am a Front-End Developer and Web Designer.</p>
-                   <p>I specialize in HTML5, CSS3, JavaScript, JQuery, API integration, responsive design, wireframing, protyping, and more.</p>
-                   <p>I have a real passion for learning--I'm learning Angular.JS and Node.JS right now--and am happy to try my hand at any cool new project!</p>
+    	           <span><p>Hi! I'm Sean Ford.</p>
+                   <p>I am a Web Developer and Designer.</p></span>
+                   <p>I build sleek, modern websites using the best technologies out there. I specialize in HTML5, CSS3, JavaScript, JQuery, API integration, responsive design, wireframing, protyping, and more.</p>
+                   <p>I have a real passion for learning. Lately I have been studying new tech like Angular.JS and data visualization software like D3 and Three.JS. I am happy to try my hand at any new project!</p>
                 </div>
             </div>
         </div>
