fix layout bugs, converted contact/about to flex box

--- a/about.html
+++ b/about.html
@@ -31,14 +31,14 @@
 	    </div>
 
 	    <div id="about" class="wrapper">
-            <div id="primary">
+            <div id="about-primary">
                 <img src="img/sf2.gif" alt="Photo of Sean Ford" class="profile-photo">
             </div>
-            <div id="secondary">
+            <div id="about-secondary">
                 <div id="about-text">
     	           <span><p>Hi! I'm Sean Ford.</p>
                    <p>I am a Web Developer and Designer.</p></span>
-                   <p>I build sleek, modern websites using the best technologies out there. I specialize in HTML5, CSS3, JavaScript, JQuery, API integration, responsive design, wireframing, protyping, and more.</p>
+                   <p>I build sleek, modern websites using the best technologies out there. I specialize in HTML5, CSS3, JavaScript, JQuery, API integration, responsive design, wireframing, protyping, and more. My code is well-documented and well-organized for easy maintenance.</p>
                    <p>I have a real passion for learning. Lately I have been studying new tech like Angular.JS and data visualization software like D3 and Three.JS. I am happy to try my hand at any new project!</p>
                 </div>
             </div>
