--- a/contact.html
+++ b/contact.html
@@ -31,8 +31,8 @@
 		    </nav>
 	    </div>
 
-	    <div class="wrapper">
-		    <section id="primary">
+	    <div class="wrapper" id="contact-wrapper">
+		    <section id="contact-primary">
                 <h3>Employment</h3>
                 <p>I am currently looking for employment as a Web Developer or Designer in the New York capital region, and I am open to freelance, remote, short-term, and long-term positions.</p>
                 <p>Feel free to contact me for more information!</p>
