--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 	    				<img src="img/devgif1a.gif" alt="Original Illustrated Animated Gif 1">
 		    			<div class="galleryInfo">	
 			    			<h3 class="gal-info">Original Graphics</h3>
-			    			<p class="gal-info">I am also a Graphic Designer. I made this GIFs with open-source graphics software.</p>
+			    			<p class="gal-info">I am also a Graphic Designer. I made this GIF with open-source graphics software</p>
 		    			</div>
 		    		</a>
 		    	</li>	
